<resources>
    <string name="app_name">Mhadhiri Sacco Ltd</string>
    <string name="title_activity_main">Main</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_main_panel">MainPanel</string>
    <string name="title_home">Home</string>
    <string name="title_Account">Account</string>
    <string name="title_logout">Logout</string>
    <string name="title_join">Join Membership</string>
    <string name="title_statement">Statement</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
