<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />


    <item
        android:id="@+id/navigation_Account"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_Account" />
    <item
        android:id="@+id/navigation_statements"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:title="@string/title_statement" />


    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_about"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="About" />

</menu>
